# substrate-kitties-project

./: .gitignore  Makefile  README.md  runtime.rs  template.rs
.devcontainer/: devcontainer.json
node/: Cargo.toml
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  tests.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
